# media-mgmt-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _setup.py  mypy-baseline.txt  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeball.yml  codespell.yml  create-release.yml  lint.yaml  pre-publish.yml  publish.yml  test.yml
docs/: IMPROVEMENT_PLAN.md  completed-directory-enhancement.md  data-structures-and-commands-design.md  dev-notes.md  improvement-suggestions.md  mypy-to-ty-migration.md  pypi-release-automation-design.md  pypi-release-implementation-plan.md  release.md  search-actions-design.md  upload-process-review.md
media_mgmt_cli/: __init__.py  aws.py  cli.py  config.py  utils.py
mgmt/: __init__.py  app.py  aws.py  config.py  files.py  log.py  utils.py
mmgmt/: __init__.py  app.py  aws.py  cli.py  config.py  files.py  log.py  utils.py
scripts/: test-upload-download.sh
tests/: test_aws.py  test_boto.py  test_click.py  test_commands.py  test_media_mgmt_cli.py  test_version.py
