[project]
name = "mgmt"
version = "0.9.1"
description = "An intuitive command line interface that wraps boto3 to search and manage media assets"
readme = "README.md"
authors = [
    {name = "Will Wright", email = "willwright@example.com"}
]
license = {text = "GNU GPL v3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.54",
    "typer>=0.9.0",
    "rich>=13.3.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2,<8.0.0",
    "pytest-mock>=3.10.0",
    "requests-mock[fixture]>=1.10.0,<2.0.0",
    "types-requests==2.28.11.17",
    "codespell>=2.2.5,<3.0.0",
]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.1a26",
]

[project.scripts]
mgmt = "mgmt:cli"

[project.urls]
Homepage = "https://github.com/will-wright-eng/media-mgmt-cli"
Repository = "https://github.com/will-wright-eng/media-mgmt-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
python-version = "3.9"

[tool.ty.rules]
# Type checking rules - mapped from mypy settings
# Note: ty uses different rule names than mypy - only include rules that ty supports
unused-ignore-comment = "warn"
redundant-cast = "warn"
possibly-unresolved-reference = "ignore"  # Global: ignore missing imports

# Module-specific overrides for third-party libraries
[[tool.ty.overrides]]
include = [
    "**/boto3/**",
    "**/botocore/**",
    "**/typer/**",
    "**/rich/**",
]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"

# Override for test files - pytest is in test dependencies
[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.codespell]
skip = '.git,venv'

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["mgmt"]

[tool.uv]
dev-dependencies = [
    "ty>=0.0.1a26",
]
